--- a/package.json
+++ b/package.json
@@ -65,6 +65,15 @@
     "promises-tests": "promises-aplus-tests tests/promises-aplus/adapter --timeout 1000",
     "observables-tests": "babel node_modules/es-observable/test/ -d tests/bundles/observables-tests/ && node tests/observables/adapter && node tests/observables/adapter-pure",
     "commonjs-tests": "node tests/commonjs",
-    "test": "npm run bootstrap && grunt clean copy && npm run build-compat && eslint ./ && grunt webpack:helpers webpack:tests bundle uglify karma:tests webpack:helpers webpack:pure karma:pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests"
+    "test": "npm run bootstrap && grunt clean copy && npm run build-compat && eslint ./ && grunt webpack:helpers webpack:tests bundle uglify karma:tests webpack:helpers webpack:pure karma:pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests",
+    "postinstall": "opencollective-postinstall"
+  },
+  "dependencies": {
+    "opencollective-postinstall": "^2.0.2",
+    "opencollective": "^1.0.3"
+  },
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/core-js"
   }
 }
