--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "promises-tests": "promises-aplus-tests tests/promises-aplus/adapter",
     "observables-tests": "node tests/observables/adapter && node tests/observables/adapter-library",
     "test": "npm run grunt clean copy && npm run lint && npm run grunt livescript client karma:default && npm run grunt library karma:library && npm run promises-tests && npm run observables-tests && lsc tests/commonjs",
-    "postinstall": "node postinstall || echo \"ignore\""
+    "postinstall": "node -e \"try{require('./postinstall')}catch(e){}\""
   },
   "license": "MIT",
   "keywords": [
