Get console error to display in CI
Related to #729 #781

--- a/packages/core-js/package.json
+++ b/packages/core-js/package.json
@@ -52,6 +52,6 @@
     "shim"
   ],
   "scripts": {
-    "postinstall": "node -e \"try{require('./postinstall')}catch(e){}\""
+    "postinstall": "node -e \"try{require('./postinstall')}catch(e){console.error(e)}\""
   }
 }
