--- a/package.json
+++ b/package.json
@@ -22,33 +22,33 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "~0.3.0",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
-    "es-observable": "git+https://github.com/tc39/proposal-observable.git#bf4d87144b6189e793593868e3c022eb51a7d292",
+    "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
     "eslint": "^6.8.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-optimize-regex": "^1.1.7",
     "eslint-plugin-qunit": "^4.0.0",
-    "eslint-plugin-sonarjs": "^0.5.0",
+    "eslint-plugin-sonarjs": "~0.5.0",
     "eslint-plugin-unicorn": "^15.0.1",
-    "grunt": "^1.0.4",
+    "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.1",
-    "grunt-karma": "^3.0.2",
-    "grunt-webpack": "^3.1.3",
-    "karma": "^4.4.1",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-karma": "^4.0.0",
+    "grunt-webpack": "^4.0.2",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
-    "karma-qunit": "^4.0.0",
-    "lerna": "^3.20.2",
-    "moon-unit": "^0.2.2",
+    "karma-qunit": "^4.1.1",
+    "lerna": "^3.22.1",
+    "moon-unit": "0.2.2",
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
-    "puppeteer": "~2.0.0",
-    "qunit": "~2.9.3",
-    "webpack": "^4.41.5"
+    "puppeteer": "^5.4.0",
+    "qunit": "^2.11.3",
+    "webpack": ">=4.44.2 <5"
   },
   "license": "MIT",
   "repository": {
@@ -72,8 +72,5 @@
     "commonjs-entries-content": "node tests/commonjs-entries-content",
     "targets-parser-tests": "node tests/targets-parser",
     "test": "grunt clean copy && npm run bootstrap && npm run build-compat && eslint ./ && grunt webpack:helpers webpack:tests bundle uglify karma:tests webpack:helpers webpack:pure karma:pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests"
-  },
-  "engines": {
-    "node": ">=8.9.0"
   }
 }
