--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-# - '15'
+# - '15' # temporarily disabled because of npm@7 bug https://github.com/npm/cli/issues/1865
   - '14.14'
   - '12.13'
   - '10.13'
