--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
     "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
     "eslint": "^7.12.0",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-import-resolver-webpack": "~0.13.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-optimize-regex": "^1.1.7",
-    "eslint-plugin-qunit": "^4.0.0",
+    "eslint-plugin-optimize-regex": "^1.2.0",
+    "eslint-plugin-qunit": "^5.0.0",
     "eslint-plugin-sonarjs": "~0.5.0",
-    "eslint-plugin-unicorn": "^15.0.1",
+    "eslint-plugin-unicorn": "^23.0.0",
     "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
