--- a/packages/core-js-compat/package.json
+++ b/packages/core-js-compat/package.json
@@ -10,12 +10,15 @@
   "main": "index.js",
   "dependencies": {
     "browserslist": "^4.16.3",
-    "semver": "7.0.0"
+    "semver": "^7.3.2"
   },
   "devDependencies": {
     "detective": "^5.2.0",
     "electron-to-chromium": "^1.3.700",
     "glob": "^7.1.6"
+  },
+  "engines": {
+    "node": ">=12.13.0"
   },
   "funding": {
     "type": "opencollective",
