--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.1",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "~0.3.0",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
+    "david": "13.0.0-alpha.2",
     "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
     "eslint": "^7.13.0",
     "eslint-import-resolver-webpack": "~0.13.0",
@@ -47,6 +48,7 @@
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
     "puppeteer": "^5.4.1",
+    "semver": "^7.3.2",
     "qunit": "^2.12.0",
     "webpack": ">=4.44.2 <5"
   },
@@ -63,6 +65,7 @@
     "build-compat-entries": "node packages/core-js-compat/src/build-entries",
     "build-compat-modules-by-versions": "node packages/core-js-compat/src/build-modules-by-versions",
     "lint": "grunt clean copy && npm run bootstrap && npm run build-compat && eslint ./",
+    "outdated": "node scripts/check-dependencies",
     "unit-tests": "grunt clean copy && npm run bootstrap && npm run build-compat && grunt bundle webpack:helpers webpack:tests karma:tests",
     "unit-tests-pure": "grunt clean copy && npm run build-compat && grunt webpack:helpers webpack:pure karma:pure",
     "bundle-promises-tests": "grunt webpack:promises-aplus-tests",
