--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-loader": "^8.2.1",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "~0.3.0",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
-    "david": "13.0.0-alpha.2",
+    "david": "^12.0.0",
     "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
     "eslint": "^7.13.0",
     "eslint-import-resolver-webpack": "~0.13.0",
