temporarily disable Node 15 again

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
           '10.13',
           '12.13',
           '14.15',
-          '15',
+          # '15' temporarily disabled because of npm@7 bug https://github.com/npm/cli/issues/1865
         ]
 
     runs-on: ${{ matrix.os }}
