--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-qunit": "^5.3.0",
-    "eslint-plugin-sonarjs": "~0.5.0",
+    "eslint-plugin-radar": "~0.1.0",
     "eslint-plugin-unicorn": "^27.0.0",
     "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
