--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-qunit": "^5.3.0",
     "eslint-plugin-radar": "~0.2.0",
+    "eslint-plugin-regexp": "~0.1.1",
     "eslint-plugin-unicorn": "^27.0.0",
     "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
