--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^5.0.0",
     "grunt-webpack": "^4.0.2",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
@@ -57,6 +56,7 @@
     "promises-aplus-tests": "^2.1.2",
     "puppeteer": "^7.0.1",
     "semver": "^7.3.4",
+    "terser": "^5.5.1",
     "qunit": "^2.14.0",
     "webpack": ">=4.46.0 <5"
   },
@@ -87,7 +87,7 @@
     "commonjs-tests": "node tests/commonjs",
     "commonjs-entries-content": "node tests/commonjs-entries-content",
     "targets-parser-tests": "node tests/targets-parser",
-    "test": "grunt clean copy && npm run bootstrap && npm run build-compat && eslint ./ && npm run bundle && grunt webpack:helpers webpack:tests uglify && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests",
-    "ci": "grunt clean copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests uglify && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests"
+    "test": "grunt clean copy && npm run bootstrap && npm run build-compat && eslint ./ && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests",
+    "ci": "grunt clean copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests"
   }
 }
