--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "eslint-plugin-unicorn": "^27.0.0",
     "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-copy": "^1.0.0",
     "grunt-webpack": "^4.0.2",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
@@ -68,17 +66,18 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist --no-ci && lerna link",
     "publish": "lerna publish from-package --yes",
-    "build": "grunt clean copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt uglify",
+    "clean-and-copy": "node scripts/clean-and-copy",
+    "build": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt uglify",
     "build-compat": "npm run build-compat-data && npm run build-compat-entries && npm run build-compat-modules-by-versions",
     "build-compat-data": "node packages/core-js-compat/src/build-data",
     "build-compat-entries": "node packages/core-js-compat/src/build-entries",
     "build-compat-modules-by-versions": "node packages/core-js-compat/src/build-modules-by-versions",
     "bundle": "node scripts/bundle",
-    "lint": "grunt clean copy && npm run bootstrap && npm run build-compat && eslint ./",
+    "lint": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && eslint ./",
     "outdated": "node scripts/check-dependencies",
     "update-version": "node scripts/update-version",
-    "unit-tests": "grunt clean copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma",
-    "unit-tests-pure": "grunt clean copy && npm run bootstrap && npm run build-compat && grunt webpack:helpers webpack:pure && npm run karma-pure",
+    "unit-tests": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma",
+    "unit-tests-pure": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && grunt webpack:helpers webpack:pure && npm run karma-pure",
     "karma": "karma start -f=packages/core-js-bundle/index.js,tests/bundles/tests.js",
     "karma-pure": "karma start -f=tests/bundles/pure.js",
     "bundle-promises-tests": "grunt webpack:promises-aplus-tests",
@@ -87,7 +86,7 @@
     "commonjs-tests": "node tests/commonjs",
     "commonjs-entries-content": "node tests/commonjs-entries-content",
     "targets-parser-tests": "node tests/targets-parser",
-    "test": "grunt clean copy && npm run bootstrap && npm run build-compat && eslint ./ && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests",
-    "ci": "grunt clean copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests"
+    "test": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && eslint ./ && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests",
+    "ci": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests"
   }
 }
