finally drop `grunt`, use `webpack@5` for tests, some changes in scripts

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "david": "^12.0.0",
     "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
     "eslint": "^7.19.0",
-    "eslint-import-resolver-webpack": "~0.13.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
@@ -41,22 +40,21 @@
     "eslint-plugin-radar": "~0.2.1",
     "eslint-plugin-regexp": "~0.1.1",
     "eslint-plugin-unicorn": "^27.0.0",
-    "grunt": "^1.3.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-webpack": "^4.0.2",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-qunit": "^4.1.2",
     "lerna": "^3.22.1",
     "moon-unit": "0.2.2",
+    "npm-run-all": "^4.1.5",
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
     "puppeteer": "^7.0.1",
     "semver": "^7.3.4",
     "terser": "^5.5.1",
     "qunit": "^2.14.0",
-    "webpack": ">=4.46.0 <5"
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0"
   },
   "license": "MIT",
   "repository": {
@@ -64,29 +62,34 @@
     "url": "https://github.com/zloirock/core-js.git"
   },
   "scripts": {
+    "init": "run-s clean-and-copy bootstrap build-compat",
     "bootstrap": "lerna bootstrap --hoist --no-ci && lerna link",
-    "publish": "lerna publish from-package --yes",
     "clean-and-copy": "node scripts/clean-and-copy",
-    "build": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt uglify",
-    "build-compat": "npm run build-compat-data && npm run build-compat-entries && npm run build-compat-modules-by-versions",
+    "build": "run-s init bundle",
+    "build-compat": "run-s build-compat-data build-compat-entries build-compat-modules-by-versions",
     "build-compat-data": "node packages/core-js-compat/src/build-data",
     "build-compat-entries": "node packages/core-js-compat/src/build-entries",
     "build-compat-modules-by-versions": "node packages/core-js-compat/src/build-modules-by-versions",
     "bundle": "node scripts/bundle",
-    "lint": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && eslint ./",
+    "bundle-helpers": "webpack --entry ./tests/helpers/qunit-helpers.js --output-filename qunit-helpers.js",
+    "bundle-tests": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
+    "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
+    "bundle-all": "run-p bundle bundle-helpers bundle-tests bundle-tests-pure",
+    "lint": "run-s init eslint",
+    "eslint": "eslint ./",
     "outdated": "node scripts/check-dependencies",
-    "update-version": "node scripts/update-version",
-    "unit-tests": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma",
-    "unit-tests-pure": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && grunt webpack:helpers webpack:pure && npm run karma-pure",
+    "unit-tests": "run-s init bundle bundle-helpers bundle-tests karma",
+    "unit-tests-pure": "run-s init bundle-helpers bundle-tests-pure karma-pure",
     "karma": "karma start -f=packages/core-js-bundle/index.js,tests/bundles/tests.js",
     "karma-pure": "karma start -f=tests/bundles/pure.js",
-    "bundle-promises-tests": "grunt webpack:promises-aplus-tests",
     "promises-tests": "promises-aplus-tests tests/promises-aplus/adapter --timeout 1000",
     "observables-tests": "babel node_modules/es-observable/test/ -d tests/bundles/observables-tests/ && node tests/observables/adapter && node tests/observables/adapter-pure",
     "commonjs-tests": "node tests/commonjs",
     "commonjs-entries-content": "node tests/commonjs-entries-content",
     "targets-parser-tests": "node tests/targets-parser",
-    "test": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && eslint ./ && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests",
-    "ci": "npm run clean-and-copy && npm run bootstrap && npm run build-compat && npm run bundle && grunt webpack:helpers webpack:tests && npm run karma && grunt webpack:pure && npm run karma-pure && npm run promises-tests && npm run observables-tests && npm run commonjs-tests && npm run commonjs-entries-content && npm run targets-parser-tests"
+    "test": "run-s init eslint bundle-all karma karma-pure promises-tests observables-tests commonjs-tests commonjs-entries-content targets-parser-tests",
+    "ci": "run-s init bundle-all karma karma-pure promises-tests observables-tests commonjs-tests commonjs-entries-content targets-parser-tests",
+    "update-version": "node scripts/update-version",
+    "publish": "lerna publish from-package --yes"
   }
 }
