rework some scripts

--- a/package.json
+++ b/package.json
@@ -63,32 +63,40 @@
   },
   "scripts": {
     "init": "run-s clean-and-copy bootstrap build-compat",
-    "bootstrap": "lerna bootstrap --hoist --no-ci && lerna link",
     "clean-and-copy": "node scripts/clean-and-copy",
-    "build": "run-s init bundle",
+    "bootstrap": "lerna bootstrap --hoist --no-ci && lerna link",
+    "build": "run-s init bundle-package",
     "build-compat": "run-s build-compat-data build-compat-entries build-compat-modules-by-versions",
     "build-compat-data": "node packages/core-js-compat/src/build-data",
     "build-compat-entries": "node packages/core-js-compat/src/build-entries",
     "build-compat-modules-by-versions": "node packages/core-js-compat/src/build-modules-by-versions",
-    "bundle": "node scripts/bundle",
+    "bundle": "run-p bundle-package bundle-helpers bundle-tests-global bundle-tests-pure",
+    "bundle-package": "node scripts/bundle",
     "bundle-helpers": "webpack --entry ./tests/helpers/qunit-helpers.js --output-filename qunit-helpers.js",
-    "bundle-tests": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
+    "bundle-tests-global": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
     "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
-    "bundle-all": "run-p bundle bundle-helpers bundle-tests bundle-tests-pure",
-    "lint": "run-s init eslint",
-    "eslint": "eslint ./",
+    "lint": "run-s init test-lint",
+    "test-lint": "eslint ./",
+    "test-unit": "run-s test-unit-global test-unit-minified test-unit-pure",
+    "test-unit-global": "karma start -f=packages/core-js-bundle/index.js,tests/bundles/tests.js",
+    "test-unit-global-standalone": "run-s init bundle-package bundle-helpers bundle-tests-global test-unit-global",
+    "test-unit-minified": "karma start -f=packages/core-js-bundle/minified.js,tests/bundles/tests.js",
+    "test-unit-pure": "karma start -f=tests/bundles/pure.js",
+    "test-unit-pure-standalone": "run-s init bundle-helpers bundle-tests-pure test-unit-pure",
+    "test-promises": "promises-aplus-tests tests/promises-aplus/adapter --timeout 1000",
+    "test-promises-standalone": "run-s init test-promises",
+    "test-observables": "babel node_modules/es-observable/test/ -d tests/bundles/observables-tests/ && node tests/observables/adapter && node tests/observables/adapter-pure",
+    "test-observables-standalone": "run-s init test-observables",
+    "test-entries": "run-p test-entries-basic test-entries-content",
+    "test-entries-basic": "node tests/commonjs",
+    "test-entries-content": "node tests/commonjs-entries-content",
+    "test-entries-standalone": "run-p init test-entries",
+    "test-targets-parser": "node tests/targets-parser",
+    "test": "run-s init test-lint bundle test-unit test-promises test-observables test-entries test-targets-parser",
+    "ci": "run-s init bundle test-unit test-promises test-observables test-entries test-targets-parser",
+    "clean-dependencies": "node scripts/clean-dependencies",
+    "refresh": "npm run clean-dependencies && npm i && npm t",
     "outdated": "node scripts/check-dependencies",
-    "unit-tests": "run-s init bundle bundle-helpers bundle-tests karma",
-    "unit-tests-pure": "run-s init bundle-helpers bundle-tests-pure karma-pure",
-    "karma": "karma start -f=packages/core-js-bundle/index.js,tests/bundles/tests.js",
-    "karma-pure": "karma start -f=tests/bundles/pure.js",
-    "promises-tests": "promises-aplus-tests tests/promises-aplus/adapter --timeout 1000",
-    "observables-tests": "babel node_modules/es-observable/test/ -d tests/bundles/observables-tests/ && node tests/observables/adapter && node tests/observables/adapter-pure",
-    "commonjs-tests": "node tests/commonjs",
-    "commonjs-entries-content": "node tests/commonjs-entries-content",
-    "targets-parser-tests": "node tests/targets-parser",
-    "test": "run-s init eslint bundle-all karma karma-pure promises-tests observables-tests commonjs-tests commonjs-entries-content targets-parser-tests",
-    "ci": "run-s init bundle-all karma karma-pure promises-tests observables-tests commonjs-tests commonjs-entries-content targets-parser-tests",
     "update-version": "node scripts/update-version",
     "publish": "lerna publish from-package --yes"
   }
