--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-qunit": "^4.1.2",
     "lerna": "^3.22.1",
     "moon-unit": "0.2.2",
+    "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
@@ -96,6 +97,7 @@
     "ci": "run-s init bundle test-unit test-promises test-observables test-entries test-targets-parser",
     "clean-dependencies": "node scripts/clean-dependencies",
     "refresh": "npm run clean-dependencies && npm i && npm t",
+    "downloads": "node scripts/downloads-by-versions",
     "outdated": "node scripts/check-dependencies",
     "update-version": "node scripts/update-version",
     "publish": "lerna publish from-package --yes"
