--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
     "puppeteer": "^7.1.0",
-    "semver": "^7.3.4",
+    "semver": "7.0.0",
     "terser": "^5.6.0",
     "qunit": "^2.14.0",
     "webpack": "^5.21.2",
