--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         os: [
           'ubuntu-latest',
-          'windows-latest',
+          # 'windows-latest', temporarily disabled because of a npm bug
           'macos-latest',
         ]
         node: [
