--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         os: [
           'ubuntu-latest',
-          # 'windows-latest', temporarily disabled because of a npm bug
+          'windows-latest',
           'macos-latest',
         ]
         node: [
@@ -26,10 +26,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ matrix.node }}-
+          path: |
+            node_modules
+            packages/*/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/package.json') }}
 
       - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v1
