--- a/packages/core-js-bundle/package.json
+++ b/packages/core-js-bundle/package.json
@@ -4,7 +4,8 @@
   "version": "3.9.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zloirock/core-js.git"
+    "url": "https://github.com/zloirock/core-js.git",
+    "directory": "packages/core-js-bundle"
   },
   "main": "index.js",
   "funding": {
