--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ node_modules/
 *.bak
 *.swp
 
+/packages/core-js/es/index.js
+/packages/core-js/features/index.js
+/packages/core-js/stable/index.js
 /packages/core-js/LICENSE
 /packages/core-js-builder/LICENSE
 /packages/core-js-bundle/LICENSE
