--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "url": "https://github.com/zloirock/core-js.git"
   },
   "scripts": {
-    "init": "run-s clean-and-copy bootstrap build-compat",
+    "init": "run-p generate-indexes bootstrap && run-p clean-and-copy build-compat",
     "clean-and-copy": "node scripts/clean-and-copy",
     "bootstrap": "lerna bootstrap --hoist --no-ci && lerna link",
     "build": "run-s init bundle-package",
@@ -78,6 +78,7 @@
     "bundle-helpers": "webpack --entry ./tests/helpers/qunit-helpers.js --output-filename qunit-helpers.js",
     "bundle-tests-global": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
     "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
+    "generate-indexes": "node scripts/generate-indexes",
     "lint": "run-s init test-lint",
     "test-lint": "eslint ./",
     "test-unit": "run-s test-unit-global test-unit-minified test-unit-pure",
