--- a/packages/core-js-builder/package.json
+++ b/packages/core-js-builder/package.json
@@ -12,8 +12,9 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "core-js": "3.9.1",
     "@core-js/compat": "3.9.1",
+    "core-js": "3.9.1",
+    "terser": "^5.6.1",
     "webpack": "^5.27.2"
   },
   "engines": {
