--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "clean-dependencies": "node scripts/clean-dependencies",
     "refresh": "npm run clean-dependencies && npm i && npm t",
     "downloads": "node scripts/downloads-by-versions",
+    "usage-100": "node scripts/usage -l=100",
+    "usage-1000": "node scripts/usage -l=1000",
     "outdated": "node scripts/check-dependencies",
     "update-version": "node scripts/update-version",
     "publish": "lerna publish from-package --yes"
