--- a/packages/core-js-compat/package.json
+++ b/packages/core-js-compat/package.json
@@ -13,6 +13,7 @@
     "semver": "7.0.0"
   },
   "devDependencies": {
+    "chalk": "^4.1.0",
     "detective": "^5.2.0",
     "electron-to-chromium": "^1.3.701",
     "glob": "^7.1.6"
