--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^6.1.0",
-    "eslint-plugin-radar": "~0.2.1",
     "eslint-plugin-regexp": "~0.9.0",
+    "eslint-plugin-sonarjs": "~0.7.0",
     "eslint-plugin-unicorn": "^30.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
