enable json linting

--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "eslint-plugin-es": "git+https://github.com/mysticatea/eslint-plugin-es.git#00d73851793541dc7b0d07292deb0ca2bc8a25e1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsonc": "^1.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^6.1.0",
     "eslint-plugin-regexp": "~0.9.0",
     "eslint-plugin-sonarjs": "~0.7.0",
     "eslint-plugin-unicorn": "^31.0.0",
+    "jsonc-eslint-parser": "^1.0.1",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
@@ -80,7 +82,7 @@
     "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
     "generate-indexes": "node scripts/generate-indexes",
     "lint": "run-s init test-lint",
-    "test-lint": "eslint ./",
+    "test-lint": "eslint --ext .js,.json ./",
     "test-unit": "run-p test-unit-global test-unit-minified test-unit-pure",
     "test-unit-global": "karma start -f=packages/core-js-bundle/index.js,tests/bundles/tests.js",
     "test-unit-global-standalone": "run-s init bundle-package bundle-helpers bundle-tests-global test-unit-global",
