--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "npm-run-all": "^4.1.5",
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
-    "puppeteer": "^9.1.1",
+    "puppeteer": ">=9.1.1 <10",
     "qunit": "^2.15.0",
     "semver": "^7.3.5",
     "terser": "^5.7.0",
