--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "core-js-pure": "file:./packages/core-js-pure",
     "david": "^12.0.0",
     "detective": "^5.2.0",
-    "electron-to-chromium": "^1.3.746",
+    "electron-to-chromium": "^1.3.749",
     "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "eslint-plugin-es": "git+https://github.com/mysticatea/eslint-plugin-es.git#00d73851793541dc7b0d07292deb0ca2bc8a25e1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
@@ -43,7 +43,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^6.1.1",
     "eslint-plugin-regexp": "~0.11.0",
-    "eslint-plugin-sonarjs": "~0.7.0",
+    "eslint-plugin-sonarjs": "~0.8.0-125",
     "eslint-plugin-unicorn": "^33.0.1",
     "glob": "^7.1.7",
     "jsonc-eslint-parser": "^1.0.1",
