--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lerna": "^4.0.0",
     "moon-unit": "0.2.2",
     "node-fetch": "^2.6.1",
+    "npm": "^7.19.0",
     "npm-run-all": "^4.1.5",
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
