--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "bundle-helpers": "webpack --entry ./tests/helpers/qunit-helpers.js --output-filename qunit-helpers.js",
     "bundle-tests-global": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
     "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
+    "check-mapping": "node scripts/check-compat-data-mapping",
     "generate-indexes": "node scripts/generate-indexes",
     "lint": "run-s init test-lint",
     "test-lint": "eslint --ext .js,.json ./",
@@ -102,7 +103,7 @@
     "test-entries-content": "node tests/commonjs-entries-content",
     "test-entries-standalone": "run-s init test-entries",
     "test-targets-parser": "node tests/targets-parser",
-    "test": "run-s init test-lint bundle test-unit test-promises test-observables test-entries test-targets-parser",
+    "test": "run-s init test-lint bundle test-unit test-promises test-observables test-entries test-targets-parser check-mapping",
     "ci": "run-s init bundle test-unit test-promises test-observables test-entries test-targets-parser",
     "clean-dependencies": "node scripts/clean-dependencies",
     "refresh": "npm run clean-dependencies && npm i && npm t",
