--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-transform-shorthand-properties": "^7.14.5",
     "@babel/plugin-transform-spread": "^7.14.6",
     "@babel/plugin-transform-template-literals": "^7.14.5",
+    "@typescript-eslint/experimental-utils": "^4.28.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "~0.3.0",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
@@ -43,7 +44,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^6.2.0",
     "eslint-plugin-regexp": "~0.13.0",
-    "eslint-plugin-sonarjs": "~0.8.0-125",
+    "eslint-plugin-sonarjs": "~0.9.0",
     "eslint-plugin-unicorn": "^34.0.1",
     "glob": "^7.1.7",
     "jsonc-eslint-parser": "^1.1.0",
