--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "check-mapping": "node scripts/check-compat-data-mapping",
     "generate-indexes": "node scripts/generate-indexes",
     "lint": "run-s init test-lint",
-    "test-lint": "eslint --ext .js,.json ./",
+    "test-lint": "eslint --ext .js,.mjs,.json ./",
     "test-unit": "run-p test-unit-global test-unit-minified test-unit-pure",
     "test-unit-global": "karma start -f=packages/core-js-bundle/index.js,tests/bundles/tests.js",
     "test-unit-global-standalone": "run-s init bundle-package bundle-helpers bundle-tests-global test-unit-global",
