--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.5",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-logical-assignment-operators": "^7.14.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
     "@babel/plugin-proposal-numeric-separator": "^7.14.5",
     "@babel/plugin-proposal-optional-catch-binding": "^7.14.5",
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@babel/plugin-transform-arrow-functions": "^7.14.5",
     "@babel/plugin-transform-block-scoped-functions": "^7.14.5",
     "@babel/plugin-transform-block-scoping": "^7.14.5",
@@ -64,7 +66,8 @@
     "semver": "^7.3.5",
     "terser": "^5.7.1",
     "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "zx": "^2.0.0"
   },
   "license": "MIT",
   "repository": {
