simplify `usage` script with `zx`

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
     "puppeteer": ">=9.1.1 <10",
+    "p-timeout": "^5.0.0",
     "qunit": "^2.16.0",
     "semver": "^7.3.5",
     "terser": "^5.7.1",
@@ -113,9 +114,9 @@
     "refresh": "npm run clean-dependencies && npm i && npm t",
     "downloads": "node scripts/downloads-by-versions",
     "downloads-main-only": "node scripts/downloads-by-versions --main-only=true",
-    "usage-100": "node scripts/usage -l=100",
-    "usage-1000": "node scripts/usage -l=1000",
-    "usage-10000": "node scripts/usage -l=10000",
+    "usage-100": "zx scripts/usage.mjs -l=100",
+    "usage-1000": "zx scripts/usage.mjs -l=1000",
+    "usage-10000": "zx scripts/usage.mjs -l=10000",
     "outdated": "node scripts/check-dependencies",
     "update-version": "node scripts/update-version && node scripts/bundle --deno",
     "publish": "lerna publish from-package --yes"
