rewrite `downloads-by-versions` script to `zx`

--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "karma-qunit": "^4.1.2",
     "lerna": "^4.0.0",
     "moon-unit": "0.2.2",
-    "node-fetch": "^2.6.1",
     "npm": "^7.19.1",
     "npm-run-all": "^4.1.5",
     "phantomjs-prebuilt": "~2.1.16",
@@ -112,8 +111,8 @@
     "ci": "run-s init bundle test-unit test-promises test-observables test-entries test-targets-parser",
     "clean-dependencies": "node scripts/clean-dependencies",
     "refresh": "npm run clean-dependencies && npm i && npm t",
-    "downloads": "node scripts/downloads-by-versions",
-    "downloads-main-only": "node scripts/downloads-by-versions --main-only=true",
+    "downloads": "zx scripts/downloads-by-versions.mjs",
+    "downloads-main-only": "zx scripts/downloads-by-versions.mjs --main-only=true",
     "usage-100": "zx scripts/usage.mjs -l=100",
     "usage-1000": "zx scripts/usage.mjs -l=1000",
     "usage-10000": "zx scripts/usage.mjs -l=10000",
