--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "npm-run-all": "^4.1.5",
     "phantomjs-prebuilt": "~2.1.16",
     "promises-aplus-tests": "^2.1.2",
-    "puppeteer": ">=9.1.1 <10",
+    "puppeteer": "~10.1.0",
     "p-timeout": "^5.0.0",
     "qunit": "^2.16.0",
     "semver": "^7.3.5",
