--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "build-compat": "run-s build-compat-data build-compat-entries build-compat-modules-by-versions",
     "build-compat-data": "node packages/core-js-compat/src/build-data",
     "build-compat-entries": "node packages/core-js-compat/src/build-entries",
-    "build-compat-modules-by-versions": "node packages/core-js-compat/src/build-modules-by-versions",
+    "build-compat-modules-by-versions": "zx packages/core-js-compat/src/build-modules-by-versions.mjs",
     "bundle": "run-p bundle-package bundle-helpers bundle-tests-global bundle-tests-pure",
     "bundle-package": "node scripts/bundle",
     "bundle-helpers": "webpack --entry ./tests/helpers/qunit-helpers.js --output-filename qunit-helpers.js",
