rewrite `build-entries` script

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-regexp": "~0.13.1",
     "eslint-plugin-sonarjs": "~0.9.1",
     "eslint-plugin-unicorn": "^34.0.1",
-    "glob": "^7.1.7",
+    "globby": "^11.0.4",
     "jsonc-eslint-parser": "^1.1.0",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
@@ -81,7 +81,7 @@
     "build": "run-s init bundle-package",
     "build-compat": "run-s build-compat-data build-compat-entries build-compat-modules-by-versions",
     "build-compat-data": "zx packages/core-js-compat/src/build-data.mjs",
-    "build-compat-entries": "node packages/core-js-compat/src/build-entries",
+    "build-compat-entries": "zx packages/core-js-compat/src/build-entries.mjs",
     "build-compat-modules-by-versions": "zx packages/core-js-compat/src/build-modules-by-versions.mjs",
     "bundle": "run-p bundle-package bundle-helpers bundle-tests-global bundle-tests-pure",
     "bundle-package": "node scripts/bundle",
