--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "scripts": {
     "init": "run-p generate-indexes bootstrap && run-p clean-and-copy build-compat",
-    "clean-and-copy": "node scripts/clean-and-copy",
+    "clean-and-copy": "zx scripts/clean-and-copy.mjs",
     "bootstrap": "lerna bootstrap --no-ci",
     "build": "run-s init bundle-package",
     "build-compat": "run-s build-compat-data build-compat-entries build-compat-modules-by-versions",
