--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "build-compat-entries": "zx packages/core-js-compat/src/build-entries.mjs",
     "build-compat-modules-by-versions": "zx packages/core-js-compat/src/build-modules-by-versions.mjs",
     "bundle": "run-p bundle-package bundle-helpers bundle-tests-global bundle-tests-pure",
-    "bundle-package": "node scripts/bundle",
+    "bundle-package": "zx scripts/bundle.mjs",
     "bundle-helpers": "webpack --entry ./tests/helpers/qunit-helpers.js --output-filename qunit-helpers.js",
     "bundle-tests-global": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
     "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
@@ -117,7 +117,7 @@
     "usage-1000": "zx scripts/usage.mjs -l=1000",
     "usage-10000": "zx scripts/usage.mjs -l=10000",
     "outdated": "zx scripts/check-dependencies.mjs",
-    "update-version": "zx scripts/update-version.mjs && node scripts/bundle --deno",
+    "update-version": "zx scripts/update-version.mjs && zx scripts/bundle.mjs --deno",
     "publish": "lerna publish from-package --yes"
   }
 }
