move some tests to zx

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-es2015-modules-simple-commonjs": "~0.3.0",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
-    "chalk": "^4.1.1",
     "confusing-browser-globals": "^1.0.10",
     "core-js": "file:./packages/core-js",
     "core-js-builder": "file:./packages/core-js-builder",
@@ -103,10 +102,10 @@
     "test-observables": "babel node_modules/es-observable/test/ -d tests/bundles/observables-tests/ && node tests/observables/adapter && node tests/observables/adapter-pure",
     "test-observables-standalone": "run-s init test-observables",
     "test-entries": "run-p test-entries-basic test-entries-content",
-    "test-entries-basic": "node tests/commonjs",
-    "test-entries-content": "node tests/commonjs-entries-content",
+    "test-entries-basic": "zx tests/commonjs.mjs",
+    "test-entries-content": "zx tests/commonjs-entries-content.mjs",
     "test-entries-standalone": "run-s init test-entries",
-    "test-targets-parser": "node tests/targets-parser",
+    "test-targets-parser": "zx tests/targets-parser.mjs",
     "test": "run-s init test-lint bundle test-unit test-promises test-observables test-entries test-targets-parser check-mapping",
     "ci": "run-s init bundle test-unit test-promises test-observables test-entries test-targets-parser",
     "clean-dependencies": "node scripts/clean-dependencies.mjs",
