add `check-unused-modules` script

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "bundle-tests-global": "webpack --entry ./tests/tests/index.js --output-filename tests.js",
     "bundle-tests-pure": "webpack --entry ./tests/pure/index.js --output-filename pure.js",
     "check-mapping": "zx scripts/check-compat-data-mapping.mjs",
+    "check-unused-modules": "zx scripts/check-unused-modules.mjs",
     "generate-indexes": "zx scripts/generate-indexes.mjs",
     "lint": "run-s init test-lint",
     "test-lint": "eslint --ext .js,.mjs,.json ./",
@@ -106,7 +107,7 @@
     "test-entries-content": "zx tests/commonjs-entries-content.mjs",
     "test-entries-standalone": "run-s init test-entries",
     "test-targets-parser": "zx tests/targets-parser.mjs",
-    "test": "run-s init test-lint bundle test-unit test-promises test-observables test-entries test-targets-parser check-mapping",
+    "test": "run-s init test-lint bundle test-unit test-promises test-observables test-entries test-targets-parser check-unused-modules check-mapping",
     "ci": "run-s init bundle test-unit test-promises test-observables test-entries test-targets-parser",
     "clean-dependencies": "node scripts/clean-dependencies.mjs",
     "refresh": "npm run clean-dependencies && npm i && npm t",
