--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "core-js-compat": "file:./packages/core-js-compat",
     "core-js-pure": "file:./packages/core-js-pure",
     "david": "^12.0.0",
-    "detective": "^5.2.0",
     "electron-to-chromium": "^1.3.795",
     "es-observable": "git+https://github.com/tc39/proposal-observable.git#d3404f06bc70c7c578a5047dfb3dc813730e3319",
     "eslint": "^7.32.0",
@@ -52,6 +51,7 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-qunit": "^4.1.2",
+    "konan": "^2.1.1",
     "lerna": "^4.0.0",
     "moon-unit": "0.2.2",
     "npm": "^7.20.3",
