--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-plugin-jsonc": "^1.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^6.2.0",
-    "eslint-plugin-regexp": "~0.13.2",
+    "eslint-plugin-regexp": "^1.0.0",
     "eslint-plugin-sonarjs": "~0.10.0",
     "eslint-plugin-unicorn": "^35.0.0",
     "jsonc-eslint-parser": "^1.1.0",
