expose `usage` script for passing args manually

--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "clean-dependencies": "node scripts/clean-dependencies.mjs",
     "refresh": "npm run clean-dependencies && npm i && npm t",
     "downloads": "zx scripts/downloads-by-versions.mjs",
-    "downloads-main-only": "zx scripts/downloads-by-versions.mjs --main-only=true",
+    "downloads-main-only": "zx scripts/downloads-by-versions.mjs --main-only",
+    "usage": "zx scripts/usage.mjs",
     "usage-100": "zx scripts/usage.mjs -l=100",
     "usage-1000": "zx scripts/usage.mjs -l=1000",
     "usage-10000": "zx scripts/usage.mjs -l=10000",
